测试发送消息。